objects/vlocity_cmt__TriggerListener__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable and disable the settings</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ListenerClassName__c</fullName>
        <description>Class name of the trigger listener</description>
        <label>Trigger class name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <description>Priority of the trigger.</description>
        <label>Priority of the trigger</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SObjectType__c</fullName>
        <description>Name of the Sobject type for which trigger/handler gets invoked</description>
        <label>Sobject type of the trigger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attribute Assignment</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>Vlocity Object or Object Type</fullName>
                </value>
                <value>
                    <fullName>Vlocity Picklist</fullName>
                </value>
                <value>
                    <fullName>Vlocity Picklist Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trigger Listener</label>
    <pluralLabel>Trigger Listeners</pluralLabel>
</CustomObject>